feat：新增更新用户信息接口
