# controller/models/response/ucenter/UserUpdatedResultVO.go
@@ -1,0 +1,5 @@
+package ucenter
+
+type UserUpdatedResultVO struct {
+	Uid string `json:"uid"`
+}
