# controller/v1/ucenter/UserController.go
@@ -53,6 +53,40 @@ func (uc *UserController) CreateUser(c *gin.Context) {
 	})
 }
 
+// UpdateUser 更新用户信息
+//
+//	@Summary		更新用户信息
+//	@Description	更新用户信息
+//	@Tags			ucenter
+//	@Accept			json
+//	@Produce		json
+//	@Param			uid		path		string								true	"用户ID"
+//	@Param			webReq	body		webRequest.WebUserUpdatedRequest	true	"请求参数"
+//	@Success		200		{object}	webResponse.UserUpdatedResultVO
+//	@Router			/ucenter/update/{uid} [put]
+func (uc *UserController) UpdateUser(c *gin.Context) {
+	var webReq webRequest.WebUserUpdatedRequest
+	if err := c.ShouldBindJSON(&webReq); err != nil {
+		uc.Error(c, err.Error())
+	}
+	bo, err := uc.userService.UpdateUser(&bizRequest.BizUserUpdatedRequest{
+		Uid:        c.Param("uid"),
+		Name:       webReq.Name,
+		Password:   webReq.Password,
+		Email:      webReq.Email,
+		Phone:      webReq.Phone,
+		ClientIp:   webReq.ClientIp,
+		ClientPort: webReq.ClientPort,
+		DeviceInfo: webReq.DeviceInfo,
+	})
+	if err != nil {
+		uc.Error(c, err.Error())
+	}
+	uc.SuccessWithData(c, &webResponse.UserUpdatedResultVO{
+		Uid: bo.Uid,
+	})
+}
+
 // GetUserById 根据用户ID获取用户信息
 //
 //	@Summary		获取用户信息
